--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</head>
 
 <body>
-	
+	<div style="overflow-x: hidden; width: 100%;">
 	<!-- first div -->
 	
 	<div id="home"> </div>
@@ -428,6 +428,8 @@
 	
 </div>
 <div class="last"></div>
+		
+	</div>
 	
 	<script>
 	
